--- a/app/src/main/res/layout/content_exercise.xml
+++ b/app/src/main/res/layout/content_exercise.xml
@@ -46,20 +46,20 @@
         <carbon.widget.FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_5sdp">
 
             <com.budiyev.android.circularprogressbar.CircularProgressBar
                 android:id="@+id/progress_bar"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="@dimen/_85sdp"
+                android:layout_height="@dimen/_85sdp"
                 app:animateProgress="true"
                 app:backgroundStrokeColor="@color/carbon_grey_300"
-                app:backgroundStrokeWidth="5dp"
+                app:backgroundStrokeWidth="@dimen/_5sdp"
                 app:drawBackgroundStroke="true"
                 app:foregroundStrokeCap="butt"
                 app:foregroundStrokeColor="@color/colorPrimary"
-                app:foregroundStrokeWidth="5dp"
+                app:foregroundStrokeWidth="@dimen/_5sdp"
                 app:indeterminate="false"
                 app:indeterminateRotationAnimationDuration="1200"
                 app:indeterminateSweepAnimationDuration="600"
@@ -73,29 +73,32 @@
 
 
             <carbon.widget.TextView
+                android:id="@+id/timer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/timer"
-                android:textSize="@dimen/exercise_activity_timer_text_size"
-                android:layout_marginBottom="2dp"
-                android:textColor="@color/carbon_textColorDisabled_light"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/_2sdp"
                 android:text="60"
-                android:layout_gravity="center"/>
+                android:textColor="@color/carbon_textColorDisabled_light"
+                android:textSize="@dimen/_48ssp" />
         </carbon.widget.FrameLayout>
 
         <carbon.widget.LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/navigation_buttons_view"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:gravity="center">
 
             <android.support.design.widget.FloatingActionButton
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="@dimen/_42sdp"
+                android:layout_height="@dimen/_42sdp"
                 android:id="@+id/fab_previous_exercise"
                 android:scaleType="center"
                 app:srcCompat="@drawable/ic_arrow_back"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_10sdp"/>
 
 
             <carbon.widget.FrameLayout
@@ -104,12 +107,12 @@
                 <carbon.widget.FrameLayout
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:layout_margin="8dp" app:carbon_elevation="@dimen/carbon_elevationFAB" android:layout_gravity="bottom|right"
-                    app:carbon_cornerRadius="64dp">
+                    android:layout_margin="@dimen/_8sdp" app:carbon_elevation="@dimen/carbon_elevationFAB" android:layout_gravity="bottom|right"
+                    app:carbon_cornerRadius="@dimen/_56sdp">
                     <com.ohoussein.playpause.PlayPauseView
                         android:id="@+id/play_pause_view"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="@dimen/_56sdp"
+                        android:layout_height="@dimen/_56sdp"
                         android:foreground="?android:selectableItemBackground"
                         app:fill_color="#f5f4f4"
                         app:pause_bg="@color/colorPrimary"
@@ -122,13 +125,14 @@
 
 
             <android.support.design.widget.FloatingActionButton
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="@dimen/_42sdp"
+                android:layout_height="@dimen/_42sdp"
                 android:id="@+id/fab_next_exercise"
                 android:scaleType="center"
                 app:srcCompat="@drawable/ic_arrow_forward"
-                android:layout_marginLeft="10dp"
-                android:padding="6dp"/>
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:padding="@dimen/_6sdp"/>
         </carbon.widget.LinearLayout>
 
 
@@ -136,9 +140,9 @@
         <carbon.widget.Divider
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
             style="@style/carbon_Divider"
             />
 
@@ -146,11 +150,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="@dimen/_5sdp">
 
             <Button
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="@dimen/_42sdp"
+                android:layout_height="@dimen/_42sdp"
                 android:id="@+id/btn_ball_location"
                 android:background="@drawable/ball_location_button_states"
                 />
@@ -161,28 +165,30 @@
                 android:text="Pod głową w okolicy kości potylicznej"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/carbon_grey_600"
-                android:textSize="@dimen/exercise_activity_bottom_text_size"
+                android:textSize="@dimen/_15ssp"
+                app:carbon_autoSizeMaxTextSize="@dimen/_16ssp"
                 />
         </LinearLayout>
 
     <carbon.widget.Divider
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_48sdp"
+        android:layout_marginRight="@dimen/_48sdp"
         style="@style/carbon_Divider"
         />
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/movement_direction_view"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="4dp"
+                android:layout_width="@dimen/_42sdp"
+                android:layout_height="@dimen/_42sdp"
+                android:padding="@dimen/_4sdp"
                 android:id="@+id/iv_movement_direction"
                 app:srcCompat="@drawable/asl_movement_direction_arrows"/>
             <carbon.widget.TextView
@@ -192,7 +198,8 @@
                 android:text="Poruszaj głową w lewo i w prawo"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/carbon_grey_600"
-                android:textSize="@dimen/exercise_activity_bottom_text_size"/>
+                android:textSize="@dimen/_15ssp"
+                app:carbon_autoSizeMaxTextSize="@dimen/_16ssp"/>
         </LinearLayout>
 
 
