--- a/app/src/main/res/layout/exercise_plan_row.xml
+++ b/app/src/main/res/layout/exercise_plan_row.xml
@@ -2,7 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="16dip"
+    android:paddingLeft="@dimen/_16sdp"
     android:orientation="horizontal"
     app:carbon_elevation="@dimen/carbon_listItemHeight">
 
@@ -16,22 +16,20 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/image"
-            android:layout_toRightOf="@+id/image"
             android:text="Neck"
             android:textColor="@color/carbon_black_54"
-            android:textSize="16sp"
+            android:textSize="@dimen/_13ssp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_marginRight="64dip"
-            android:layout_marginBottom="16dip"
-            android:layout_marginTop="16dip"
+            android:layout_marginRight="@dimen/_64sdp"
+            android:layout_marginBottom="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_13sdp"
             />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginRight="128dip"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginRight="@dimen/_128sdp"
             android:background="@color/carbon_dividerColor_light" />
     </LinearLayout>
 
