--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="exercise_activity_bottom_text_size">27sp</dimen>
     <dimen name="exercise_activity_timer_text_size">72sp</dimen>
+    <dimen name="exercise_activity_progressbar_size">125dp</dimen>
 </resources>
