--- a/app/src/main/res/layout/activity_exercise_plan.xml
+++ b/app/src/main/res/layout/activity_exercise_plan.xml
@@ -19,12 +19,25 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:gravity="right">
+                <View
+                    android:layout_width="?attr/actionBarSize"
+                    android:layout_height="?attr/actionBarSize"
+                    android:id="@+id/showcase_view_menu"/>
+            </LinearLayout>
+        </FrameLayout>
+
 
     </android.support.design.widget.AppBarLayout>
 
@@ -32,11 +45,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_48sdp"
+        android:layout_height="@dimen/_48sdp"
         android:layout_gravity="end|bottom"
         app:srcCompat="@drawable/ic_arrow_right"
-        android:layout_margin="24dp"
+        android:layout_margin="@dimen/_24sdp"
         android:scaleType="center"/>
 
 
