--- a/app/src/main/res/layout/menu_row.xml
+++ b/app/src/main/res/layout/menu_row.xml
@@ -12,13 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:background="@drawable/menu_item_circle_background"
-        android:layout_margin="16dip"
+        android:layout_margin="@dimen/_13sdp"
         android:gravity="center">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/list_image"
-            android:layout_width="40dip"
-            android:layout_height="40dip"
+            android:layout_width="@dimen/_34sdp"
+            android:layout_height="@dimen/_34sdp"
             app:srcCompat="@drawable/menu_item_head"/>
 
     </LinearLayout>
@@ -32,7 +32,7 @@
         android:layout_toRightOf="@+id/image"
         android:text="Neck"
         android:textColor="@color/carbon_black_54"
-        android:textSize="15sp"
+        android:textSize="@dimen/_13ssp"
         android:textStyle="bold"
         android:typeface="sans"
         />
@@ -44,18 +44,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:textColor="@color/carbon_textColorDisabled_light"
-        android:textSize="12sp"
-        android:layout_marginTop="1dip"
+        android:textSize="@dimen/_10ssp"
+        android:layout_marginTop="@dimen/_1sdp"
         android:layout_toRightOf="@+id/image"
         android:text="5 min" />
 
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="80dip"
-        android:layout_marginLeft="80dip"
-        android:layout_marginRight="16dip"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginTop="@dimen/_66sdp"
+        android:layout_marginLeft="@dimen/_66sdp"
+        android:layout_marginRight="@dimen/_13sdp"
         android:background="@color/carbon_dividerColor_light" />
 
 </RelativeLayout>
