--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="exercise_activity_bottom_text_size">18sp</dimen>
     <dimen name="exercise_activity_timer_text_size">48sp</dimen>
+    <dimen name="exercise_activity_progressbar_size">85dp</dimen>
 </resources>
