--- a/app/src/main/res/layout/activity_ball_location.xml
+++ b/app/src/main/res/layout/activity_ball_location.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:scaleType = "centerCrop"
         android:id="@+id/iv_background"
-        android:src="@drawable/back"
         />
 
 
@@ -40,7 +39,7 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="@dimen/_48sdp"
-        android:layout_height="@dimen/_48sdp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         app:srcCompat="@drawable/ic_arrow_right"
