--- a/app/src/main/res/layout/activity_exercise_plan.xml
+++ b/app/src/main/res/layout/activity_exercise_plan.xml
@@ -46,7 +46,7 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="@dimen/_48sdp"
-        android:layout_height="@dimen/_48sdp"
+        android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         app:srcCompat="@drawable/ic_arrow_right"
         android:layout_margin="@dimen/_24sdp"
