--- a/app/src/main/res/layout/content_exercise.xml
+++ b/app/src/main/res/layout/content_exercise.xml
@@ -93,7 +93,7 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:layout_width="@dimen/_42sdp"
-                android:layout_height="@dimen/_42sdp"
+                android:layout_height="wrap_content"
                 android:id="@+id/fab_previous_exercise"
                 android:scaleType="center"
                 app:srcCompat="@drawable/ic_arrow_back"
@@ -112,7 +112,7 @@
                     <com.ohoussein.playpause.PlayPauseView
                         android:id="@+id/play_pause_view"
                         android:layout_width="@dimen/_56sdp"
-                        android:layout_height="@dimen/_56sdp"
+                        android:layout_height="wrap_content"
                         android:foreground="?android:selectableItemBackground"
                         app:fill_color="#f5f4f4"
                         app:pause_bg="@color/colorPrimary"
@@ -126,7 +126,7 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:layout_width="@dimen/_42sdp"
-                android:layout_height="@dimen/_42sdp"
+                android:layout_height="wrap_content"
                 android:id="@+id/fab_next_exercise"
                 android:scaleType="center"
                 app:srcCompat="@drawable/ic_arrow_forward"
@@ -152,11 +152,10 @@
             android:orientation="horizontal"
             android:layout_marginTop="@dimen/_5sdp">
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 android:layout_width="@dimen/_42sdp"
                 android:layout_height="@dimen/_42sdp"
                 android:id="@+id/btn_ball_location"
-                android:background="@drawable/ball_location_button_states"
                 />
             <carbon.widget.TextView
                 android:layout_width="wrap_content"
