--- a/app/src/main/res/layout/fragment_intro_third_slide_content.xml
+++ b/app/src/main/res/layout/fragment_intro_third_slide_content.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +45,7 @@
                 android:layout_weight="0.9"
                 android:gravity="left"
                 android:textColor="@android:color/white"
-                android:textSize="20sp"
+                android:textSize="@dimen/_16ssp"
                 android:text="@string/intro_description_third_disclaimer"/>
         </LinearLayout>
     </LinearLayout>
@@ -51,7 +56,7 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:orientation="horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
 
         >
 
@@ -60,17 +65,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:theme="@style/CheckboxStyle"
+            app:buttonTint="@color/carbon_white"
+            android:text="@string/intro_accept_text"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/_13ssp"
             />
 
 
-        <TextView
-            android:id="@+id/accept_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:text="@string/intro_accept_text"
-           />
 
     </LinearLayout>
 
@@ -80,4 +81,4 @@
 
 
 
-</merge>
+</LinearLayout>
