Fixed problem with showing wrong exercise plan

--- a/app/src/main/res/values/ball_location_string_arrays.xml
+++ b/app/src/main/res/values/ball_location_string_arrays.xml
@@ -23,7 +23,7 @@
     </string-array>
 
     <string-array name="lumbar_spine_ball_location">
-        <item>Tylno-boczna strona tułowia, połowa długości miedzy klatką piersiową a biodrem</item>
+        <item>Tylno-boczna strona tułowia, połowa długości miedzy klatką piersiową a talerzem biodrowym</item>
         <item>Na mięśniu pośladkowym wielkim w jego centralnej części</item>
         <item>Dolna część mięśnia pośladkowego, między krętarzem kości udowej a kością krzyżową</item>
         <item>Tylno-boczna część mięśni pośladkowych, poniżej grzebienia biodrowego</item>
