--- a/app/src/main/res/values/exercise_images.xml
+++ b/app/src/main/res/values/exercise_images.xml
@@ -4,11 +4,14 @@
         <item>suboccipital_3 suboccipital_4</item>
         <item>neck_extensors_1 neck_extensors_2 neck_extensors_3</item>
         <item>levator_scapulae_1 levator_scapulae_2 levator_scapulae_3</item>
+        <item>suboccipital_3 suboccipital_4</item>
+        <item>neck_extensors_1 neck_extensors_2 neck_extensors_3</item>
+        <item>levator_scapulae_1 levator_scapulae_2 levator_scapulae_3</item>
     </string-array>
 
     <string-array name="shoulder_images">
         <item>levator_scapulae_1 levator_scapulae_2 levator_scapulae_3</item>
-        <item>rhomboid_muscles_1 rhomboid_muscles_2</item>
+        <item>rhomboid_muscles_1 rhomboid_muscles_2 rhomboid_muscles_3</item>
         <item>infraspinatus_and_teres_muscles_4 infraspinatus_and_teres_muscles_5 infraspinatus_and_teres_muscles_6</item>
         <item>latissimus_dorsi_muscle_1 latissimus_dorsi_muscle_2</item>
         <item>pectoral_muscles_1 pectoral_muscles_2 pectoral_muscles_3</item>
@@ -16,12 +19,21 @@
     </string-array>
 
     <string-array name="thoracic_spine_images">
-        <item>rhomboid_muscles_3 rhomboid_muscles_4</item>
+        <item>rhomboid_muscles_1 rhomboid_muscles_2 rhomboid_muscles_3</item>
+        <item>erector_spinae_and_trapezius_ascending_1 erector_spinae_and_trapezius_ascending_2 erector_spinae_and_trapezius_ascending_3</item>
+        <item>pectoral_muscles_1 pectoral_muscles_2 pectoral_muscles_3</item>
+        <item>rhomboid_muscles_1 rhomboid_muscles_2 rhomboid_muscles_3</item>
         <item>erector_spinae_and_trapezius_ascending_1 erector_spinae_and_trapezius_ascending_2 erector_spinae_and_trapezius_ascending_3</item>
         <item>pectoral_muscles_1 pectoral_muscles_2 pectoral_muscles_3</item>
     </string-array>
 
     <string-array name="lumbar_spine_images">
+        <item>quadratus_lumborum_1 quadratus_lumborum_2</item>
+        <item>gluteus_maximus_1 gluteus_maximus_2</item>
+        <item>piriformis_1 piriformis_2</item>
+        <item>gluteus_medius_1 gluteus_medius_2</item>
+        <item>tensor_fasciae_latae_1 tensor_fasciae_latae_2</item>
+        <item>biceps_femoris_1 biceps_femoris_2</item>
         <item>quadratus_lumborum_1 quadratus_lumborum_2</item>
         <item>gluteus_maximus_1 gluteus_maximus_2</item>
         <item>piriformis_1 piriformis_2</item>
