--- a/app/src/main/res/layout/activity_ball_location.xml
+++ b/app/src/main/res/layout/activity_ball_location.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:scaleType = "centerCrop"
         android:id="@+id/iv_background"
+        android:src="@drawable/back"
         />
 
 
@@ -46,39 +47,52 @@
         android:layout_margin="@dimen/_24sdp"
         android:scaleType="center" />
 
+    <!--<ru.dimorinny.floatingtextbutton.FloatingTextButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_48sdp"
+        app:floating_background_color="@color/colorPrimary"
+        app:floating_left_icon="@drawable/ic_arrow_right"
+        app:floating_title="@string/fab_text_start_exercise"
+        app:floating_title_color="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        />-->
+
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <android.support.constraint.Guideline
             android:id="@+id/left_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent=".59" />
+            app:layout_constraintGuide_percent=".39" />
 
         <android.support.constraint.Guideline
             android:id="@+id/right_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent=".67" />
+            app:layout_constraintGuide_percent=".47" />
 
         <android.support.constraint.Guideline
             android:id="@+id/top_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".24" />
+            app:layout_constraintGuide_percent=".19" />
 
         <android.support.constraint.Guideline
             android:id="@+id/bottom_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".29" />
+            app:layout_constraintGuide_percent=".24" />
 
         <pl.bclogic.pulsator4droid.library.PulsatorLayout
             android:id="@+id/pulsator"
