--- a/app/src/main/res/layout/activity_exercise_plan.xml
+++ b/app/src/main/res/layout/activity_exercise_plan.xml
@@ -43,14 +43,25 @@
 
     <include layout="@layout/content_exercise_plan" />
 
-    <android.support.design.widget.FloatingActionButton
+<!--    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="@dimen/_48sdp"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         app:srcCompat="@drawable/ic_arrow_right"
         android:layout_margin="@dimen/_24sdp"
-        android:scaleType="center"/>
+        android:scaleType="center"/>-->
+
+    <ru.dimorinny.floatingtextbutton.FloatingTextButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_48sdp"
+        app:floating_background_color="@color/colorPrimary"
+        app:floating_left_icon="@drawable/ic_arrow_right"
+        app:floating_title="@string/fab_text_start_plan"
+        app:floating_title_color="@android:color/white"
+        android:layout_gravity="center|bottom"
+        />
 
 
 </android.support.design.widget.CoordinatorLayout>
