--- a/app/src/main/res/values/ball_location_string_arrays.xml
+++ b/app/src/main/res/values/ball_location_string_arrays.xml
@@ -5,6 +5,9 @@
         <item>Pod głową w okolicy kości potylicznej</item>
         <item>Okolica tylno-boczna szyi w połowie jej długości</item>
         <item>Połowa odległości między szyją a barkiem</item>
+        <item>Pod głową w okolicy kości potylicznej</item>
+        <item>Okolica tylno-boczna szyi w połowie jej długości</item>
+        <item>Połowa odległości między szyją a barkiem</item>
     </string-array>
 
     <string-array name="shoulder_ball_location">
@@ -20,9 +23,18 @@
         <item>Na wysokości łopatek, między odcinkiem piersiowym kręgosłupa a łopatką</item>
         <item>Okolice kąta dolnego łopatki, w połowie odcinka piersiowego kręgosłupa</item>
         <item>Połowa odległości na linii między obojczykiem a sutkiem</item>
+        <item>Na wysokości łopatek, między odcinkiem piersiowym kręgosłupa a łopatką</item>
+        <item>Okolice kąta dolnego łopatki, w połowie odcinka piersiowego kręgosłupa</item>
+        <item>Połowa odległości na linii między obojczykiem a sutkiem</item>
     </string-array>
 
     <string-array name="lumbar_spine_ball_location">
+        <item>Tylno-boczna strona tułowia, połowa długości miedzy klatką piersiową a talerzem biodrowym</item>
+        <item>Na mięśniu pośladkowym wielkim w jego centralnej części</item>
+        <item>Dolna część mięśnia pośladkowego, między krętarzem kości udowej a kością krzyżową</item>
+        <item>Tylno-boczna część mięśni pośladkowych, poniżej grzebienia biodrowego</item>
+        <item>Przednio-boczna strona stawu biodrowego</item>
+        <item>Tylno-boczna część uda w połowie długości</item>
         <item>Tylno-boczna strona tułowia, połowa długości miedzy klatką piersiową a talerzem biodrowym</item>
         <item>Na mięśniu pośladkowym wielkim w jego centralnej części</item>
         <item>Dolna część mięśnia pośladkowego, między krętarzem kości udowej a kością krzyżową</item>
