--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="image_overlay_black">#40000000</color>
     <color name="text_shadow">#88000000</color>
     <color name="disabled_button_background">#b3b3b3</color>
+
+    <color name="colorShowcaseMask">#cc007b20</color>
 </resources>
