--- a/app/src/main/res/values/movement_direction_string_arrays.xml
+++ b/app/src/main/res/values/movement_direction_string_arrays.xml
@@ -4,9 +4,15 @@
         <item>Ruch głową w górę i w dół</item>
         <item>Ruch w górę i w dół poprzez uginanie kolan</item>
         <item>Ruch w górę i w dół poprzez uginanie kolan</item>
+        <item>Ruch głową w górę i w dół</item>
+        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
+        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
     </string-array>
 
     <string-array name="neck_movement_direction_after_30_seconds">
+        <item>Ruch głową w lewo i w prawo</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch głową w lewo i w prawo</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
@@ -34,9 +40,15 @@
         <item>W górę i w dół poprzez odpychanie się z kończyn dolnych</item>
         <item>Ruch w górę i w dół poprzez uginanie kolan</item>
         <item>Ruch w górę i w dół poprzez uginanie kolan</item>
+        <item>W górę i w dół poprzez odpychanie się z kończyn dolnych</item>
+        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
+        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
     </string-array>
 
     <string-array name="thoracic_spine_movement_direction_after_30_seconds">
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
@@ -49,9 +61,21 @@
         <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
         <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
         <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
+        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
+        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
+        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
+        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
+        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
+        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
     </string-array>
 
     <string-array name="lumbar_spine_movement_direction_after_30_seconds">
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
+        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
         <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
