--- a/app/src/main/res/layout/activity_exercise_plan.xml
+++ b/app/src/main/res/layout/activity_exercise_plan.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_48sdp"
         app:floating_background_color="@color/colorPrimary"
-        app:floating_left_icon="@drawable/ic_arrow_right"
+        app:floating_left_icon="@drawable/ic_arrow_floatingtextbutton"
         app:floating_title="@string/fab_text_start_plan"
         app:floating_title_color="@android:color/white"
         android:layout_gravity="center|bottom"
